--- a/core/app/views/Applys/_relate_payments.html
+++ b/core/app/views/Applys/_relate_payments.html
@@ -14,9 +14,8 @@
     <tr>
       <td><a href="@{Payments.show(payment.id)}" target="_blank">${payment.paymentNumber}</a></td>
       <td style="color:${payment.stateColor()}">${payment.state.label()}</td>
-      <td class="total_price" symbol="${payment.currency.symbol()}" amount="${new java.math.BigDecimal(payment.approvalAmount()).setScale(2,4).floatValue()}">
-      ${payment.currency.symbol()} ${new java.math.BigDecimal(payment.approvalAmount()).setScale(2,4)
-      .floatValue().format('#,###.##')}
+      <td class="total_price" symbol="${payment.currency.symbol()}" amount="${new java.math.BigDecimal(payment.approvalAmount())}">
+      ${payment.currency.symbol()} ${new java.math.BigDecimal(payment.approvalAmount()).format('#,###.##')}
       </td>
         #{list items:models.finance.PaymentUnit.S.values(), as:'state'}
           <td style="color:${state.stateColor()}">${payment.unitsStateSize(state)}</td>
