--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -141,6 +141,9 @@
       #{power.ck "report.procurereports"}
         <li><a href="@{ReportDownloads.procureReportsIndex()}">采购报表下载</a></li>
       #{/power.ck}
+
+        <li><a href="@{Cooperators.b2bCustomInfoIndex()}">B2B客户基本信息</a></li>
+        <li><a href="@{Orders.btbOrderIndex()}">B2B销售订单信息</a></li>
   </ul>
 </li>
 #{/power.ck}
