--- a/core/app/views/Cooperators/createB2BCustomInfoPage.html
+++ b/core/app/views/Cooperators/createB2BCustomInfoPage.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
+#{extends 'main_full.html' /}
+#{set title:'新增客户' /}
+#{set 'moreScripts'}
+    #{script 'component/pagination.coffee'/}
+#{/set}
 
-</body>
-</html>
+#{errorMsgs /}
+#{flash_alert /}
+
+#{info_row title:'添加B2B客户信息' /}
+<div class="row-fluid">
+  <form action="@{Cooperators.createB2BCustom()}" method="post" id="update_product_form">
+    <table class="table table-bordered">
+      <tr>
+        <td style="text-align:center">客户/公司名称<span style="color:red">*</span>：</td>
+        <td>
+          <input type="text" name="b.customName" value="${b.customName}" required>
+          <input type="hidden" name="b.id" value="${b.id}">
+        </td>
+
+      </tr>
+      <tr>
+        <td style="text-align:center">联系人<span style="color:red">*</span>：</td>
+        <td><input type="text" name="b.contacts" value="${b.contacts}" required></td>
+      </tr>
+      <tr>
+        <td style="text-align:center">联系人电话<span style="color:red">*</span>：</td>
+        <td><input type="text" name="b.contactPhone" value="${b.contactPhone}" required></td>
+      </tr>
+      <tr>
+        <td style="text-align:center">邮箱：</td>
+        <td><input type="text" name="b.email" value="${b.email}"></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <input type="submit" class="btn btn-primary" value="保存">
+          <a href="@{Cooperators.b2bCustomInfoIndex()}" class="btn btn-danger">取消</a>
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
