--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -36,6 +36,11 @@
         #{/list}
     </select>
 
+      #{select_enum name: "p.planState", items: models.procure.DeliverPlan.P.values(), value: p.planState,
+      class:'inline'}
+        <option value="">状态</option>
+      #{/select_enum}
+
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="text" name="p.search" class="input-medium" value="${p.search}" placeHolder="搜索 id 自动识别, +N 语法">
@@ -51,6 +56,7 @@
         <th>#</th>
         <th>Name</th>
         <th>供应商</th>
+        <th>状态</th>
         <th>User</th>
         <th>Create</th>
       </tr>
@@ -65,6 +71,7 @@
               <span class="badge badge-info">${dp.units.size()}</span>
             </td>
             <td>${dp.supplier()?.fullName}</td>
+            <td>${dp.state.label()}</td>
             <td>${dp.handler.username}</td>
             <td>#{time_tooltip time:dp.createDate/}</td>
           </tr>
