--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -16,11 +16,14 @@
   <th>仓库</th>
   <th>供应商</th>
   <th>采购数量</th>
+
+#{if deliveryplan!=true}
   <th>单价</th>
   <th rel="popover" content="如果交货, 数量为交货数量, 如果没有交货,则为计划采购数量">
     <abbr title=" ">总价</abbr>
   </th>
   <th>剩余请款金额</th>
+#{/if}
   <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="auto">FnSku</th>
   <th>运输方式</th>
   <th>预计交货时间</th>
@@ -61,9 +64,14 @@
   <td>${unit.whouse?.name()}</td>
   <td>${unit.cooperator?.name}</td>
   <td>${unit.attrs.planQty}</td>
-  <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
-  <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.qty() * unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
-  <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.leftAmount()).setScale(2,4).floatValue().format('#,###.##')}</td>
+
+    #{if deliveryplan!=true}
+      <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
+      <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.qty() * unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
+      <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.leftAmount()).setScale(2,4).floatValue().format('#,###.##')}</td>
+    #{/if}
+
+
   <td>
     <!-- FnSku 下载 Label -->
       #{if unit.selling?.fnSku}
