修改导出出货单

--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -77,7 +77,7 @@
           </tr>
           <tr id="dp_${dp_index}" style="display:none;">
             <td colspan="12" style="padding:0;border:none">
-                #{render 'ProcureUnits/_unit_list.html', units:dp.units, norecord: true/}
+                #{render 'ProcureUnits/_unit_list.html', units:dp.units, norecord: true, deliveryplan:true/}
             </td>
           </tr>
         #{/list}
