--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -135,8 +135,9 @@
     #{power.ck 'fbas.deploytoamazon'}
       <a href="javascript:void(0);" data-url='@{FBAs.deploysToAmazon(dmt.id)}' data-method="POST" id="deployFBAs" class="btn btn-success">
         批量创建 FBA
-      </a>                                       ｀
-
+      </a>
+    #{/power.ck}
+    #{power.ck 'fbas.procureunitsorder'}
       <a href="javascript:void(0);" data-url="@{Excels.procureunitsOrder(dmt.id)}" data-method="POST"
          id="downloadProcureunitsOrder" class="btn btn-success" rel="popover" content="下载选定的采购单元的出货单">
         <i class="icon-download-alt"></i>下载出货单
