全选事件去掉空格

--- a/core/app/views/Finances/skuProfitAnalyse.html
+++ b/core/app/views/Finances/skuProfitAnalyse.html
@@ -38,7 +38,7 @@
         #{/list}
     </select>
     <input type="hidden" id="category_hidden" name="p.categories" value="${p.categories}">
-
+    <input type="hidden" value="${p.categories}">
     SKU:
     <input type="text" name="p.sku" data-provide="typeahead" data-source="${skus}" value="${p?.sku}" id="unit_sku">
 
