中差评查询增加权限

--- a/core/app/views/Pmdashboards/reviewRecords.html
+++ b/core/app/views/Pmdashboards/reviewRecords.html
@@ -18,9 +18,11 @@
       </select>
     </div>
     <div class="inline">
+    #{power.ck "pmdashboards.reviewrecords"}
       <a data-href="@{Pmdashboards.reviewRecords()}" class="btn btn-primary inline" id="reviewRecords">查询</a>
       <a data-href="@{Pmdashboards.exportReviewRecords()}" class="btn btn-primary inline" id="exportReviewRecords">导出
         Excel</a>
+    #{/power.ck}
     </div>
   </form>
 </div>
