--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -63,10 +63,16 @@
         <option value="false" ${p.promotion == false ? 'selected' : ''}>不是促销订单</option>
       </select>
 
+      <div class="input-prepend inline">
+        <span class="add-on">SKU:</span>
+        <input type="text" style="width:160px;" id="inputsku" name="p.sku" placeholder="SKU" autocomplete="off" value="${p.sku}">
+      </div>
+
       <div class="inline input-append" id="search_btns">
         <input type="hidden" name="p.page" value="${p.page}">
         <!-- TODO  +2 销售数量大于 2 暂时不支持 -->
         <input type="text" style="width:160px;" name="p.search" placeholder="例 *cvd4hs8y6m, 可带 *" value="${p.search}">
+
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
     </div>
