--- a/core/app/views/Orders/createBtbOrderPage.html
+++ b/core/app/views/Orders/createBtbOrderPage.html
@@ -57,7 +57,7 @@
             </td>
             <td>售价：
               <input type="text" style="width:60px;" name="b.btbOrderItemList[${i_index-1}].price" value="${i.price}" required>
-              <select style="width:60px;" name="b.btbOrderItemList[${i_index-1}].currency">
+              <select style="width:100px;" name="b.btbOrderItemList[${i_index-1}].currency">
                   #{list items:helper.Currency, as:'c'}
                     <option value="${c.name()}" #{if i.currency.name()==c.name()} selected #{/if}>${c.name()}</option>
                   #{/list}
@@ -82,7 +82,7 @@
         </td>
         <td>售价：
           <input type="text" style="width:60px;" name="b.btbOrderItemList[0].price" value="" required>
-          <select style="width:60px;" name="b.btbOrderItemList[0].currency">
+          <select style="width:100px;" name="b.btbOrderItemList[0].currency">
               #{list items:helper.Currency, as:'c'}
                 <option value="${c.name()}" #{if c.name()=='USD'} selected #{/if}>${c.name()}</option>
               #{/list}
@@ -101,8 +101,8 @@
       <tr>
         <td>客户运费：</td>
         <td colspan="3">
-          <input type="text" style="width:80px;" name="b.customShipCost" value="${b.customShipCost}">
-          <select style="width:60px;" name="b.customShipUnit">
+          <input type="text" style="width:100px;" name="b.customShipCost" value="${b.customShipCost}">
+          <select style="width:100px;" name="b.customShipUnit">
           #{list items:helper.Currency, as:'c'}
             <option value="${c.name()}" #{if b.customShipUnit? c.name()==b.customShipUnit?.name() : c.name()=='USD'}
                     selected #{/if}>${c.name()}</option>
@@ -124,8 +124,8 @@
         </td>
         <td>手续费:</td>
         <td>
-          <input type="text" style="width:80px;" name="b.bankChargesCost" value="${b.bankChargesCost}">
-          <select style="width:60px;" name="b.bankChargesUnit">
+          <input type="text" style="width:100px;" name="b.bankChargesCost" value="${b.bankChargesCost}">
+          <select style="width:100px;" name="b.bankChargesUnit">
           #{list items:helper.Currency, as:'c'}
             <option value="${c.name()}" #{if b.bankChargesUnit ? c.name()==b.bankChargesUnit?.name() : c.name()=='USD'}
                     selected #{/if}>${c.name()}
@@ -140,17 +140,17 @@
       <tr>
         <td>计量<span style="color:red">*</span>:</td>
         <td>
-          <select style="width:60px;" name="b.shipWeightUnit" required>
+          <select style="width:100px;" name="b.shipWeightUnit">
           #{list items:models.market.BtbOrder.S, as:'s'}
             <option value="${s}" #{if s.name()==b.shipWeightUnit?.name()} selected #{/if}>${s.label()}</option>
           #{/list}
           </select>
-          <input type="text" style="width:80px;" name="b.shipWeight" value="${b.shipWeight}" required>
+          <input type="text" style="width:80px;" name="b.shipWeight" value="${b.shipWeight}">
         </td>
         <td>运输费用<span style="color:red">*</span>:</td>
         <td>
-          <input type="text" style="width:80px;" name="b.shipCost" value="${b.shipCost}" required>
-          <select style="width:60px;" name="b.shipCostUnit" required>
+          <input type="text" style="width:80px;" name="b.shipCost" value="${b.shipCost}">
+          <select style="width:100px;" name="b.shipCostUnit" required>
           #{list items:helper.Currency, as:'c'}
             <option value="${c.name()}" #{if b.shipCostUnit ? c.name()==b.shipCostUnit?.name() : c.name()=='CNY'}
                     selected #{/if}>${c.name()}
@@ -160,8 +160,7 @@
         </td>
         <td>运输方式<span style="color:red">*</span>:</td>
         <td>
-          <select style="width:90px;" name="b.shipWay" required>
-            <option value="">选择</option>
+          <select style="width:100px;" name="b.shipWay">
           #{list items:models.market.BtbOrder.SH, as:'c'}
             <option value="${c.name()}" #{if c.name()==b.shipWay?.name()} selected #{/if}>${c.label()}</option>
           #{/list}
@@ -203,7 +202,7 @@
     </td>
     <td>售价：
       <input type="text" style="width:60px;" name="b.btbOrderItemList[<%= index %>].price" value="" required>
-      <select style="width:60px;" name="b.btbOrderItemList[<%= index %>].currency">
+      <select style="width:100px;" name="b.btbOrderItemList[<%= index %>].currency">
       #{list items:helper.Currency, as:'c'}
         <option value="${c.name()}" #{if c.name()=='USD'} selected #{/if}>${c.name()}</option>
       #{/list}
