修改B2B订单报表相关问题

--- a/core/app/views/Orders/btbOrderIndex.html
+++ b/core/app/views/Orders/btbOrderIndex.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="input-append input-prepend inline">
-        <a href="@{Excels.btbOrderDetailReport()}" class="btn btn-info">导出excel</a>
+        <a href="javascript:void(0)" id="download_excel" class="btn btn-info">导出excel</a>
       </div>
 
       <div class="input-append input-prepend inline">
