--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -68,7 +68,12 @@
         <input type="text" style="width:160px;" id="inputsku" name="p.sku" placeholder="SKU" autocomplete="off" value="${p.sku}">
       </div>
 
-      <div class="inline input-append" id="search_btns">
+      <div class="input-prepend inline">
+        <span class="add-on">PERCENT:</span>
+        <input type="text" style="width:40px;" name="p.percent" placeholder="百分比" autocomplete="off" value="${p.percent}">
+      </div>
+
+      <div class="inline input-append" id="search_btn">
         <input type="hidden" name="p.page" value="${p.page}">
         <!-- TODO  +2 销售数量大于 2 暂时不支持 -->
         <input type="text" style="width:160px;" name="p.search" placeholder="例 *cvd4hs8y6m, 可带 *" value="${p.search}">
