订单SKU查询功能

--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -68,10 +68,12 @@
         <input type="text" style="width:160px;" id="inputsku" name="p.sku" placeholder="SKU" autocomplete="off" value="${p.sku}">
       </div>
 
+      <!--
       <div class="input-prepend inline">
         <span class="add-on">PERCENT:</span>
         <input type="text" style="width:40px;" name="p.percent" placeholder="百分比" autocomplete="off" value="${p.percent}">
-      </div>
+      </div>}
+      -->
 
       <div class="inline input-append" id="search_btn">
         <input type="hidden" name="p.page" value="${p.page}">
