--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -116,7 +116,7 @@
     </td>
     <td>${dto.main_ship_type}</td>
     <td style="${dto.returnRates > 0.3 ? 'background-color:#FF0000' : ''}" rel="popover" data-content="${dto.returns}/${dto.sales}"
-        placement="top">${(dto.returnRates * 100).format('#.#%')}
+        placement="top">${dto.returnRates.format('#.#%')}
     </td>
   </tr>
   #{/list}
