* 取消退货率的排序

--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -57,7 +57,7 @@
     <th>
       主要运输方式
     </th>
-    <th orderby='returnRates' name="returnRates" class="sortable">退货率<i class="icon-sort"></i></th>
+    <th>退货率</th>
   </tr>
   </thead>
   <tbody>
