*  增加加拿大市场

--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -26,6 +26,7 @@
             <button class="btn btn-small" data-market='amazon.co.uk'>英国</button>
             <button class="btn btn-small" data-market='amazon.it'>意大利</button>
             <button class="btn btn-small" data-market='amazon.jp'>日本</button>
+            <button class="btn btn-small" data-market='amazon.ca'>加拿大</button>
             <button class="btn btn-small" data-market=''>汇总</button>
           </div>
         </div>
