*  Analyzes/index 还原成一次性加载所有数据的方式

--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -1,6 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'Analyze'/}
 #{set 'moreScripts'}
+    #{script_cdn name: 'jquery.dataTables.js'/}
     #{script_cdn name: 'highstock.js'/}
     #{script_cdn name: 'timeline/timeline_js/timeline-api.js'/}
     #{script_cdn name: 'analyzes/timeline.coffee'/}
