*  错误修改了 invoice.html 的内容, 现在还原

--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -107,7 +107,7 @@
     <td>${country}</td>
   </tr>
   <tr class="tr1 tr2">
-    <td colspan="2">StockObj of Description</td>
+    <td colspan="2">Goods of Description</td>
     <td>Quantity(PCS)</td>
     <td>Unit Price(USD)</td>
     <td>Total Amount(USD)</td>
