*  添加 入库记录 出库记录 库存移动 入口

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -237,7 +237,15 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
-
+                #{power.ck "whouses.inboundrecords"}
+                  <li><a href="@{Whouses.inboundRecords()}">入库记录</a></li>
+                #{/power.ck}
+                #{power.ck "whouses.outboundrecords"}
+                  <li><a href="@{Whouses.outboundRecords()}">出库记录</a></li>
+                #{/power.ck}
+                #{power.ck "whouses.stockrecords"}
+                  <li><a href="@{Whouses.stockRecords()}">库存异动</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
