采购计划分页按照每页70条数据

--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -130,7 +130,7 @@
         </tr>
         <tr id="dmt_${dmt_index}" style="display:none;">
           <td colspan="12" style="padding:0;border:none">
-              #{render 'ProcureUnits/_unit_list.html', units:dmt.units, p:p, norecord: true/}
+              #{render 'ProcureUnits/_unit_list.html', units:dmt.units, norecord: true/}
           </td>
         </tr>
       #{/list}
