--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -237,14 +237,14 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
-                #{power.ck "whouses.inboundrecords"}
-                  <li><a href="@{Whouses.inboundRecords()}">入库记录</a></li>
+                #{power.ck "inboundrecords.index"}
+                  <li><a href="@{InboundRecords.index()}">入库记录</a></li>
                 #{/power.ck}
-                #{power.ck "whouses.outboundrecords"}
-                  <li><a href="@{Whouses.outboundRecords()}">出库记录</a></li>
+                #{power.ck "outboundrecords.index"}
+                  <li><a href="@{OutboundRecords.index()}">出库记录</a></li>
                 #{/power.ck}
-                #{power.ck "whouses.stockrecords"}
-                  <li><a href="@{Whouses.stockRecords()}">库存异动</a></li>
+                #{power.ck "stockrecords.index"}
+                  <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
             </ul>
           </li>
