--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -52,6 +52,7 @@
   </tr>
   <tr>
     <td colspan="4">
+      <input type="hidden" name="record.origin" value="Other">
       <button class="btn btn-primary" name="create_record">创建</button>
     </td>
   </tr>
