--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -4,10 +4,9 @@
     #{script_cdn name: 'inboundrecords/index.coffee'/}
 #{/set}
 #{flash_alert /}
-#{info_row title:'入库记录' /}
 
 <div class="row-fluid">
-  <form action="@{Whouses.inboundRecords()}" method="get" class="search_form" id="search_form">
+  <form action="@{InboundRecords.index()}" method="get" class="search_form" id="search_form">
     <div class="span12">
       <div class="input-prepend input-append inline">
         <span class="add-on">From:</span>
@@ -32,7 +31,8 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" class="input-xxlarge" name="p.search" placeholder="出货计划 Or 质检任务 Or SKU" value="${p.search}">
+        <input type="text" name="p.search" placeholder="出货计划 ID Or 质检任务 Or SKU" value="${p.search}" style="width:
+        200px;">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
 
@@ -43,9 +43,9 @@
     </div>
   </form>
 
+  <form action="@{InboundRecords.confirm()}" name="confirm_form">
+    <div class="span12">
 
-  <div class="span12">
-    <form action="@{InboundRecords.confirm()}" name="confirm_form">
       <table class="table table-condensed table-bordered">
         <tr>
           <th>
@@ -96,6 +96,6 @@
         </tr>
       #{/list}
       </table>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
