*  入库计划确认时需要校验仓库不能为空

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -87,7 +87,13 @@
           <td>
             <input type="text" name="badQty" value="${r.badQty}" style="width:45px;">
           </td>
-          <td>${r.targetWhouse.name}</td>
+          <td>
+            <select name="targetWhouse">
+                #{list items:whouses, as:'whouse'}
+                  <option value="${whouse.id}">${whouse.name}</option>
+                #{/list}
+            </select>
+          </td>
           <td>#{time_tooltip time: r.createDate/}</td>
           <td>#{time_tooltip time: r.completeDate/}</td>
           <td>
